--- a/CSS1.css
+++ b/CSS1.css
@@ -1,12 +1,12 @@
 body {
-    background-color: rgb(188, 255, 255);
-    color:rgb(0, 112, 6)
+    background-color: black;
+    color:black
 }
 table {
         border: 1px solid rgb(53, 6, 0);
         margin: 1px 1px 1px 1px;
     }
-p {color: rgb(82, 124, 43);}
+p {color: black}
 p {
     border: 1px solid rgb(0, 0, 0);
     margin: 50px 1px 1px 1px;
