--- a/CSS1.css
+++ b/CSS1.css
@@ -6,8 +6,8 @@ table {
         border: 1px solid rgb(53, 6, 0);
         margin: 1px 1px 1px 1px;
     }
-p {color: black}
-p {
+p {color: black
+    
     border: 1px solid rgb(0, 0, 0);
     margin: 50px 1px 1px 1px;
 
