--- a/CSS1.css
+++ b/CSS1.css
@@ -1,12 +1,12 @@
 body {
-    background-color: navy;
+    background-color: black;
     color:white
 }
 table {
         border: 1px solid rgb(53, 6, 0);
         margin: 1px 1px 1px 1px;
     }
-p {color: white;}
+p {color: rgb(82, 124, 43);}
 p {
     border: 1px solid rgb(0, 0, 0);
     margin: 50px 1px 1px 1px;
